<resources>
    <string name="app_name">Shoutit</string>
    <string name="shoutit_scheme" translatable="false">shoutit</string>
    <string name="price_free">FREE</string>
    <string name="shout_type_offer">Offer</string>
    <string name="shout_type_request">Request</string>
    <string name="exit_text">Press BACK again to exit</string>
    <string name="nothing_to_show">Nothing to show</string>
    <string name="empty_field"/>
    <plurals name="plural_credits">
        <item quantity="one">%1$d Credit</item>
        <item quantity="other">%1$d Credits</item>
    </plurals>
    <plurals name="plural_days">
        <item quantity="one">%1$d Day</item>
        <item quantity="other">%1$d Days</item>
    </plurals>
    <string name="listening">Listening</string>
    <string name="listen">Listen</string>
    <string name="newrelic_api_key" translatable="false">AAa1d7a1015f94d533c54162c2a91f97f739b178cc</string>
    <string name="app_see_api_key" translatable="false">67b28ab63f414eb68e5dffdcbe7b538f</string>
    <string name="facebook_app_id" translatable="false">353625811317277</string>
    <string name="facebook_shout_list_ad_id" translatable="false">353625811317277_1245942718752244</string>
    <string name="facebook_shout_detail_ad_id" translatable="false">353625811317277_1249824038364112</string>
    <string name="error_default">Ooops, something went wrong</string>
    <string name="error_connection">Ooops, probably there is no Internet connection</string>
    <string name="error_field_empty">Field cannot be empty</string>
    <string name="error_wrong_email">Incorrect email address</string>
    <string name="error_action_only_for_logged_in_user">Only for logged in users</string>
    <string name="error_image_upload">Sorry, cannot upload image. Please try again</string>
    <string name="error_refreshing_token_failed">Something went wrong. Please try to log in again</string>
    <string name="error_location_disabled">Probably your location service is off. Please turn it on in order to fetch your location.</string>
    <string name="permission_location_explanation">We need your location to prepare appropriate content</string>
    <string name="permission_granted">Permissions have been granted</string>
    <string name="permission_not_granted">Permissions not granted</string>
    <string name="permission_camera_create_shout_explanation">Permissions needed to take photos and record videos.</string>
    <string name="permission_contacts_explanation">We need the Contacts permission to check which of your contacts use Shoutit</string>
    <string name="permission_record_audio_explanation">We need Record Audio permission to record videos.</string>
    <string name="image_video_capture_helper_select_image_source">Select image source</string>
    <string name="image_video_capture_helper_sd_unmounted">No external storage</string>
    <string name="image_video_capture_helper_sd_unmounted_title">Error</string>
    <string name="intro_welcome">Buy &amp; Sell while Chatting</string>
    <string name="intro_buy">Buy and Sell while Chatting</string>
    <string name="intro_login">Login</string>
    <string name="intro_skip">Skip</string>
    <string name="intro_help">Help</string>
    <string name="intro_fail_login">Failed to create guest account</string>
    <string name="intro_search">Search</string>
    <string name="intro_search_text">Find what you need in your Community or anywhere in the World.</string>
    <string name="intro_shout">Shout</string>
    <string name="intro_shout_text">List anything for FREE. Include Photos and Videos to appeal to Buyers.</string>
    <string name="intro_chat">Chat</string>
    <string name="intro_chat_text">Connect with Buyers and Sellers. Send Photos, Videos and Shouts.</string>
    <string name="intro_video">Video Chat</string>
    <string name="intro_video_text">Video is worth a thousand pictures! see what you want to buy live before buying it.</string>
    <string name="home_menu_chat">Chat</string>
    <string name="home_menu_search">Search</string>
    <string name="home_see_all">See All</string>
    <string name="home_shouts_header_logged">MY FEED</string>
    <string name="home_shouts_header_guest">SHOUTS IN %1$s</string>
    <string name="home_discover_header">DISCOVER %1$s</string>
    <string name="login_email_hint">Email or Username</string>
    <string name="login_password_hint">Password</string>
    <string name="login_btn_text">Log in</string>
    <string name="login_sign_up_text">Sign up</string>
    <string name="login_empty_mail">Mail cannot be empty.</string>
    <string name="login_empty_password">Password cannot be empty.</string>
    <string name="login_error_empty_email">Email or username cannot be empty</string>
    <string name="register_sign_up_btn_text">Sign up</string>
    <string name="register_name">Name</string>
    <string name="register_email">Email</string>
    <string name="register_password">Password</string>
    <string name="register_empty_mail">Email cannot be empty.</string>
    <string name="register_empty_password">Password must have at least 6 and no more than 20 characters.</string>
    <string name="register_empty_name">Name cannot be empty</string>
    <string name="register_have_an_account">Have an account?</string>
    <string name="register_log_in">Log in</string>
    <string name="register_bottom_text">By Proceeding you also agree to Shoutit’s %1$s and %2$s</string>
    <string name="register_bottom_text_terms_of_service">Terms of Service</string>
    <string name="register_bottom_text_privacy_policy">Privacy Policy</string>
    <string name="register_forgot_password">Forgot password</string>
    <string name="register_next_label">Next</string>
    <string name="register_done_label">Done</string>
    <string name="register_create_page_text">%1$s for brand or business</string>
    <string name="register_create_page_highlight">Create a Page</string>
    <string name="login_intro_join">Join Now!</string>
    <string name="login_intro_text">Login and discover what others are selling in your neighborhood or start selling in seconds</string>
    <string name="login_intro_facebook">Log in with Facebook</string>
    <string name="login_intro_google">Log in with Google</string>
    <string name="login_intro_signup">Log in with E-mail</string>
    <string name="login_intro_feedback">Feedback</string>
    <string name="login_intro_help">Help</string>
    <string name="login_intro_about">About</string>
    <string name="login_sign_up_new">New to Shoutit?</string>
    <string name="login_intro_fail">Failed to login</string>
    <string name="login_next_label">Next</string>
    <string name="login_done_label">Done</string>
    <string name="about_terms_of_service">Terms of Service</string>
    <string name="about_privacy_policy">Privacy Policy</string>
    <string name="about_legal">Legal</string>
    <string name="about_terms_of_service_title">Terms of Service</string>
    <string name="about_privacy_policy_title">Privacy Policy</string>
    <string name="about_legal_title">Legal</string>
    <string name="about_title">About</string>
    <string name="html_activity_terms">Terms of Service</string>
    <string name="html_activity_privacy">Privacy Policy</string>
    <string name="location_toolbar_title">Change your location</string>
    <string name="location_search_hint">Type an address</string>
    <string name="location_header">My current location (automatic updates)</string>
    <string name="location_header_selected_location">Current location</string>
    <string name="location_permissions_required">Location permissions required</string>
    <string name="menu_create_shout">Create Shout</string>
    <string name="menu_item_home">Home</string>
    <string name="menu_item_discover">Discover</string>
    <string name="menu_item_browse">Browse</string>
    <string name="menu_item_chats">Chats</string>
    <string name="menu_item_settings">Settings</string>
    <string name="menu_item_help">Help</string>
    <string name="menu_item_invite_friends">Invite Friends</string>
    <string name="menu_change_location">Change</string>
    <string name="menu_shoutit_credit">Shoutit Credit</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="menu_guest">Guest</string>
    <string name="menu_version_name">Shoutit %1$s</string>
    <string name="menu_use_as_format">Use Shoutit as %1$s</string>
    <string name="menu_item_bookmarks">Bookmarks</string>
    <string name="post_login_next">next</string>
    <string name="post_login_activity_title">Listen to your Interest!</string>
    <string name="location_fetching_error">Sorry, cannot get locations</string>
    <string name="location_update_error">Sorry, cannot update your location. Please try again.</string>
    <string name="location_update_success">Location successfully changed</string>
    <string name="home_no_shouts">No shouts in current location</string>
    <string name="home_no_shouts_logged_in_user">Nothing in your feed click here to add some interests</string>
    <string name="discover_shouts_header">Discover shouts</string>
    <string name="discover_see_all_button">See all shouts</string>
    <string name="shout_add_to_cart">Add to cart</string>
    <string name="shout_date">Date</string>
    <string name="shout_category">Category</string>
    <string name="shout_location">Location</string>
    <string name="shout_share">Share shout</string>
    <string name="shout_not_found">This shout doesn\'t exist anymore</string>
    <string name="shout_mark_as_sold">Mark as Sold</string>
    <string name="shout_unmark_as_sold">Unmark as Sold</string>
    <string name="shout_mark_as_fulfilled">Mark as Fulfilled</string>
    <string name="shout_unmark_as_fulfilled">Unmark as Fulfilled</string>
    <string name="discover_shouts_share">Share</string>
    <string name="discover_shouts_title">%s Shouts</string>
    <plurals name="shouts_results_pluaral">
        <item quantity="one">%1$d result</item>
        <item quantity="other">%1$d results</item>
    </plurals>
    <string name="settings_title">Settings</string>
    <string name="settings_account">Account</string>
    <string name="settings_notifications">Notifications</string>
    <string name="settings_about">About</string>
    <string name="account_title">Account</string>
    <string name="account_email">Email</string>
    <string name="account_password">Password</string>
    <string name="settings_new_email">New email</string>
    <string name="settings_current_password">Current Password</string>
    <string name="settings_new_password">New Password</string>
    <string name="settings_new_email_verify">Verify New Password</string>
    <string name="settings_change_password">Change Password</string>
    <string name="account_logout">Log out</string>
    <string name="filters_ctegory_header">Category</string>
    <string name="filters_price_from">From</string>
    <string name="filters_price_to">To</string>
    <string name="pages_view_page">View Page</string>
    <string name="pages_use_page">Use Shoutit as this Page</string>
    <string name="pages_edit_page">Edit Page</string>
    <string name="signup_your_name">Your name:</string>
    <string name="signup_signup_btn">Sign up</string>
    <string name="signup_choose_welcome">Welcome, %1$s</string>
    <string name="signup_choose_header">Do you want to create a Page for your business or cause?</string>
    <string name="signup_choose_not_now">Not now</string>
    <string name="signup_choose_create_page">Create page</string>
    <string name="signup_choose_continue">continue with user profile</string>
    <string name="signup_choose_for_business">for your business or cause</string>
    <string name="signup_choose_more_info">More information about pages</string>
    <string name="signup_header">Please, fill in your name to let others know who you are</string>
</resources>