<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/about_terms"
        style="@style/SettingsItem"
        android:text="@string/about_terms_of_service"/>

    <View
        android:id="@+id/settings_account_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

    <TextView
        android:id="@+id/about_privacy"
        style="@style/SettingsItem"
        android:text="@string/about_privacy_policy"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

    <TextView
        android:id="@+id/about_legal"
        style="@style/SettingsItem"
        android:text="@string/about_legal"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

</LinearLayout>