<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:orientation="vertical">

    <TextView
        android:id="@+id/account_email_tv"
        style="@style/SettingsItem"
        android:text="@string/account_email" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12" />

    <TextView
        android:id="@+id/account_password_tv"
        style="@style/SettingsItem"
        android:text="@string/account_password" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12" />

    <TextView
        android:id="@+id/account_logout_tv"
        style="@style/SettingsItem"
        android:text="@string/account_logout" />

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12" />

</LinearLayout>