<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="14dp">

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/my_pages_view_page_btn"
        style="@style/BaseButtonDefaultBackgroundStyle"
        android:layout_width="match_parent"
        android:text="@string/pages_view_page"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/my_pages_use_shoutit_as_this_page_btn"
        style="@style/BaseButtonDefaultBackgroundStyle"
        android:layout_width="match_parent"
        android:text="@string/pages_use_page"
        android:textColor="@android:color/white" />

    <android.support.v7.widget.AppCompatButton
        android:id="@+id/my_pages_edit_page_btn"
        style="@style/BaseButtonDefaultBackgroundStyle"
        android:layout_width="match_parent"
        android:text="@string/pages_edit_page"
        android:textColor="@android:color/white" />

</LinearLayout>