<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="100dp"
        android:background="@color/white"
        android:orientation="vertical"
        android:padding="8dp"
        android:gravity="center">

        <TextView
            android:id="@+id/signup_choose_name_tv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="2dp"
            android:gravity="center"
            android:text="@string/signup_choose_welcome"
            android:textColor="@color/black_87"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:paddingLeft="60dp"
            android:paddingRight="60dp"
            android:textColor="@color/textBlackSecondary"
            android:fontFamily="sans-serif-light"
            android:text="@string/signup_choose_header"
            android:textSize="14sp" />

    </LinearLayout>

    <include layout="@layout/shadow_line" />

    <LinearLayout
        android:id="@+id/signup_choose_contunue_as_user"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="74dp"
        android:background="@drawable/selector_green_button_with_stroke"
        android:gravity="center"
        android:orientation="vertical"
        android:textColor="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/signup_choose_not_now"
            android:textAllCaps="true"
            android:textColor="@android:color/white"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/signup_choose_continue"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/signup_choose_create_page"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_height="74dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="10dp"
        android:background="#333333"
        android:gravity="center"
        android:orientation="vertical"
        android:textColor="@android:color/white">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/signup_choose_create_page"
            android:textAllCaps="true"
            android:fontFamily="sans-serif-medium"
            android:textSize="16sp"
            android:textColor="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ellipsize="end"
            android:maxLines="1"
            android:singleLine="true"
            android:text="@string/signup_choose_for_business"
            android:textColor="@android:color/white"
            android:textSize="14sp" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <include layout="@layout/shadow_line_rotated" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:text="@string/signup_choose_more_info"
        android:gravity="center"
        android:textSize="16sp"
        android:textColor="@color/colorPrimary"/>

</LinearLayout>