<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="120dp"
        android:background="@android:color/white"
        android:gravity="center"
        android:padding="16dp"
        android:text="@string/signup_header"
        android:textSize="18sp" />

    <include layout="@layout/shadow_item" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="30dp"
        android:text="@string/signup_your_name"
        android:textColor="@color/black_54"
        android:textSize="18sp" />

    <android.support.design.widget.TextInputLayout
        android:id="@+id/signup_name_til"
        style="@style/BlueInputStyle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        app:hintTextAppearance="@style/BlueInputStyle">

        <EditText
            android:id="@+id/signup_name_et"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/signup_your_name"
            android:imeActionLabel="@string/login_done_label"
            android:imeOptions="actionDone"
            android:singleLine="true" />

    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/signup_signup_btn"
        style="@style/BaseButtonStyle"
        android:layout_width="match_parent"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/selector_green_button_with_stroke"
        android:text="@string/signup_signup_btn"
        android:textColor="@android:color/white" />

</LinearLayout>