<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/default_bg_color"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        style="@style/AppTheme.BaseToolbarStyle"
        android:id="@+id/activity_settings_toolbar"
        android:elevation="0dp"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="3dp"
        android:background="@drawable/toolbar_drop_shadow"/>
    
    <TextView
        android:id="@+id/settings_account"
        style="@style/SettingsItem"
        android:text="@string/settings_account"/>

    <View
        android:id="@+id/settings_account_divider"
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

    <TextView
        android:id="@+id/settings_notifications"
        style="@style/SettingsItem"
        android:text="@string/settings_notifications"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

    <TextView
        android:id="@+id/settings_about"
        style="@style/SettingsItem"
        android:text="@string/settings_about"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0.5dp"
        android:background="@color/black_12"/>

</LinearLayout>