<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:fillViewport="true"
    android:background="@drawable/gradient_intro"
    tools:context=".view.intro.IntroActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:id="@+id/activity_intro_logo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/status_bar_margin"
            android:layout_marginTop="58dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:id="@+id/activity_intro_welcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_intro_logo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-medium"
            android:text="@string/intro_welcome"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/activity_intro_buy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/activity_intro_welcome"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="26dp"
            android:text="@string/intro_buy"
            android:textColor="@color/intro_buy"
            android:textSize="16sp" />

        <Button
            android:layout_width="200dp"
            android:layout_height="47dp"
            android:layout_below="@+id/activity_intro_buy"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="100dp"
            android:fontFamily="sans-serif-regular"
            android:text="@string/intro_login"
            android:background="@drawable/selector_intro"
            android:textAllCaps="false"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/activity_intro_skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:background="?selectableItemBackground"
            android:padding="16dp"
            android:text="@string/intro_skip"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/activity_intro_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:background="?selectableItemBackground"
            android:padding="16dp"
            android:text="@string/intro_help"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>

</ScrollView>